--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>772251578942-0qfo8h9fth3n0cek1j0u9rjo3ab44f0i.apps.googleusercontent.com</string>
+	<string>772251578942-7ifs5mv8dei3bfq8m9euqrubtmtj9c3g.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.772251578942-0qfo8h9fth3n0cek1j0u9rjo3ab44f0i</string>
+	<string>com.googleusercontent.apps.772251578942-7ifs5mv8dei3bfq8m9euqrubtmtj9c3g</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>772251578942-943sj4119r1v533b0n8n8c54ui2k6tg7.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDLFBEiHsLvvr8x_DB5WCTZVmK3T3ExW2s</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.loginfacebook</string>
+	<string>com.codecti.selfttour</string>
 	<key>PROJECT_ID</key>
 	<string>flutterfacebook-976f9</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:772251578942:ios:fa39b6b76a65013f</string>
+	<string>1:772251578942:ios:db50caa7aa41902f</string>
 	<key>DATABASE_URL</key>
 	<string>https://flutterfacebook-976f9.firebaseio.com</string>
 </dict>
